2004-04-05  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, nb (build_blog):
	Fixed bug that caused all permalinks to be processed unconditionally.

	* plugins/master_index.sh, plugins/postformat/tidy.sh:
	- Replaced OUTPUT_FILE with MKPAGE_OUTFILE in tidy plugin.
	- Replaced call to nb with load_template in master archive plugin.

	* nb, plugins/articles.off, plugins/postformat/tidy.sh:
	- Changed PLUGIN_OUTFILE to PLUGIN_NAME_OUTFILE.
	- (make_page): Changed OUT_FILE to MKPAGE_OUTFILE.
	- Added calls to autoformat and postformat plugins in articles plugins.

2004-04-04  n1xt3r  <n1xt3r@scorcher>

	* plugins/articles.off: New articles plugin:
	- removed articles.list, uses .txt files in articles directory.
	- 1st line in .txt file becomes title, the rest is the body.
	- replaced call to nb with load_template.

	* ChangeLog, articles/articles.list, nb, plugins/articles.off:
	Removed articles/articles.list, replacing articles.off ...

	* ChangeLog, nb (show_help):
	added a line about specifying multiple blog id's.

2004-04-02  n1xt3r  <n1xt3r@scorcher>

	* default/templates/entry.htm, ChangeLog:
	Moved anchor, NB_EntryDay above NB_EntryDate in the entry template.

	* plugins/archive/monthly/monthly-cal.sh, plugins/calendar.sh:
	Removed test for FULL_PERMALINKS from calendar plugins.

	* ChangeLog, default/templates/entry.htm, nb, plugins/archive/monthly/monthly-cal.sh, plugins/calendar.sh, plugins/list_entries.sh:
	Created new anchor, NB_EntryDay and modified calendar plugins to create links to NB_EntryDay.

2004-03-30  n1xt3r  <n1xt3r@scorcher>

	* default/templates/rdf_catfeedentry.xml, default/templates/rdf_entry.xml, plugins/archive/monthly/monthly-cal.sh, plugins/calendar.sh, plugins/list_entries.sh, ChangeLog, nb:
	Fixed "a id=... name=... and W3C validator" bug.
	- Dropped BLOG_TZD from NB_EntryID.
	- Added BLOG_TZD to the feed templates.

2004-03-26  n1xt3r  <n1xt3r@scorcher>

	* plugins/archive/monthly/monthly-cal.sh:
	Make NB_ArchiveTitle pretty, set to CAL_HEAD.